--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.vssavin</groupId>
     <artifactId>secure-lib</artifactId>
-    <version>1.0</version>
+    <version>1.0.1</version>
 
     <properties>
         <git.repository.mvn.branch>mvn-repo</git.repository.mvn.branch>
@@ -27,9 +27,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
